Got the simple cycle detection unit tests to work